<?xml version="1.0" encoding="UTF-8"?>
<ui version="4.0">
 <class>Explorer</class>
 <widget class="QWidget" name="Explorer">
  <property name="geometry">
   <rect>
    <x>0</x>
    <y>0</y>
    <width>821</width>
    <height>526</height>
   </rect>
  </property>
  <property name="windowTitle">
   <string>Form</string>
  </property>
  <layout class="QHBoxLayout" name="horizontalLayout_4">
   <item>
    <layout class="QGridLayout" name="gridLayout">
     <item row="1" column="0">
      <widget class="QTreeView" name="treeView"/>
     </item>
     <item row="0" column="1">
      <layout class="QHBoxLayout" name="horizontalLayout_2">
       <item>
        <widget class="QComboBox" name="groupedBox">
         <item>
          <property name="text">
           <string>Group by folders</string>
          </property>
         </item>
         <item>
          <property name="text">
           <string>Group by types</string>
          </property>
         </item>
        </widget>
       </item>
       <item>
        <widget class="QComboBox" name="displayBox">
         <item>
          <property name="text">
           <string>Display in pie</string>
          </property>
         </item>
         <item>
          <property name="text">
           <string>Display in bar</string>
          </property>
         </item>
        </widget>
       </item>
      </layout>
     </item>
     <item row="1" column="1">
      <widget class="QTableView" name="tableView"/>
     </item>
    </layout>
   </item>
  </layout>
 </widget>
 <resources/>
 <connections/>
</ui>
